feat: add idempotent task creation (#4)
* feat: add idempotent task creation

* refactor: return task creation result as array

---------
